# code

./: README.md  dev.eglenelidgamaliel.code.json  meson.build
data/: dev.eglenelidgamaliel.code.appdata.xml.in  dev.eglenelidgamaliel.code.desktop.in  dev.eglenelidgamaliel.code.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: code.gresource.xml  code.in  main.py  meson.build  widgets.py  window.py  window.ui
src/gtk/: help-overlay.ui  preferences_window.ui
